YAMLThing: fix typo and minor refactor
Signed-off-by: Jimmy Tanagra <jcode@tanagra.id.au>